@@ -1,3 +1,9 @@
+2010-08-20  Robert Gleeson <rob@flowof.info>
+
+	* Document every pair of getter and setter on RubyBlock using 
+	  the @overload YARD tag. Before this change, documentation for 
+	  setters was not visible.
+
 2010-08-12  Robert Gleeson <rob@flowof.info> (v2.2.1)
 
 	* Fixed a bug that saw #e ( an alias for #exception ) always return nil.
